RET-5422 (#2756)
* Updates to amend respondent representative details.

* updates to have latest versions of et-common and et-data-model

* updates to show myhmcts address on cya page of amend respondent representative contact details.

* updates to show myhmcts address on cya page of amend respondent representative contact details.

* Update src/main/java/uk/gov/hmcts/ethos/replacement/docmosis/utils/AddressUtils.java

Co-authored-by: Harpreet Jhita <harpreet.jhita@justice.gov.uk>

* Update src/main/java/uk/gov/hmcts/ethos/replacement/docmosis/utils/AddressUtils.java

Co-authored-by: Harpreet Jhita <harpreet.jhita@justice.gov.uk>

* updates to show myhmcts address on cya page of amend respondent representative contact details.

* updates to show myhmcts address on cya page of amend respondent representative contact details.

* updates to show myhmcts address on cya page of amend respondent representative contact details.

* Update src/main/java/uk/gov/hmcts/ethos/replacement/docmosis/utils/AddressUtils.java

Co-authored-by: btensay <tensay.bulcha@gmail.com>

---------

Co-authored-by: Harpreet Jhita <harpreet.jhita@justice.gov.uk>
Co-authored-by: btensay <tensay.bulcha@gmail.com>